log
Thu 20 Apr 2023 04:45:22 PM UTC: 
 tests:  1|8
total_score: 0/70
f3f6f26
Thu 20 Apr 2023 04:59:58 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
75cb8dd
Thu 20 Apr 2023 05:00:08 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
41947bb
Thu 20 Apr 2023 05:10:59 PM UTC: 
 treemap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  11|6
total_score: 15/70
d5dc464
Thu 20 Apr 2023 05:14:46 PM UTC: 
 treemap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  0|0
1510222
Thu 20 Apr 2023 05:32:32 PM UTC: 
 treemap.c | 23 +++++++++++++----------
 1 file changed, 13 insertions(+), 10 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   53 |     return NULL;
      |            ^~~~
treemap.c:48:6: note: declared here
   48 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
treemap.c:60:29: error: statement with no effect [-Werror=unused-value]
   60 |         tree->current->right==new;
      |         ~~~~~~~~~~~~~~~~~~~~^~~~~
treemap.c:70:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   70 |   return NULL;
      |          ^~~~
treemap.c:48:6: note: declared here
   48 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
db42a65
Thu 20 Apr 2023 05:34:22 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   53 |     return NULL;
      |            ^~~~
treemap.c:48:6: note: declared here
   48 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
treemap.c:61:29: error: statement with no effect [-Werror=unused-value]
   61 |         tree->current->right==new;
      |         ~~~~~~~~~~~~~~~~~~~~^~~~~
treemap.c:71:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   71 |   return NULL;
      |          ^~~~
treemap.c:48:6: note: declared here
   48 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a356b06
Thu 20 Apr 2023 05:38:30 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:63:29: error: statement with no effect [-Werror=unused-value]
   63 |         tree->current->right==new;
      |         ~~~~~~~~~~~~~~~~~~~~^~~~~
treemap.c:71:6: error: expected expression before ‘.’ token
   71 |     }.
      |      ^
treemap.c:73:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   73 |   return NULL;
      |          ^~~~
treemap.c:48:6: note: declared here
   48 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
53e0093
Thu 20 Apr 2023 05:41:29 PM UTC: 
 treemap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:63:29: error: statement with no effect [-Werror=unused-value]
   63 |         tree->current->right==new;
      |         ~~~~~~~~~~~~~~~~~~~~^~~~~
treemap.c:79:6: error: expected expression before ‘.’ token
   79 |     }.
      |      ^
treemap.c:81:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   81 |   return NULL;
      |          ^~~~
treemap.c:48:6: note: declared here
   48 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c8be861
Thu 20 Apr 2023 05:42:18 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:61:32: error: comparison between pointer and integer [-Werror]
   61 |       if( !tree->current->right==NULL){
      |                                ^~
treemap.c:63:29: error: statement with no effect [-Werror=unused-value]
   63 |         tree->current->right==new;
      |         ~~~~~~~~~~~~~~~~~~~~^~~~~
treemap.c:79:6: error: expected expression before ‘.’ token
   79 |     }.
      |      ^
treemap.c:81:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   81 |   return NULL;
      |          ^~~~
treemap.c:48:6: note: declared here
   48 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
be2158b
Thu 20 Apr 2023 05:46:29 PM UTC: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:81:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   81 |   return NULL;
      |          ^~~~
treemap.c:48:6: note: declared here
   48 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0a1be0a
Thu 20 Apr 2023 05:46:41 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
f026124
Thu 20 Apr 2023 07:00:13 PM UTC: 
 treemap.c | 26 ++++++++++++++------------
 1 file changed, 14 insertions(+), 12 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:64:31: error: value computed is not used [-Werror=unused-value]
   64 |           tree->current->right==createTreeNode(key,value);
      |           ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6cd39ca
Thu 20 Apr 2023 07:00:24 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
c06f70b
Thu 20 Apr 2023 07:42:13 PM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
c179649
Thu 20 Apr 2023 08:05:46 PM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  0|0
afbe324
